Closed Bug 990428 Opened 12 years ago Closed 12 years ago

[Bluetooth][PTS][Bluez][1.4] TC_AG_IIC_BV_01_I Failed

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:1.4+, firefox29 wontfix, firefox30 fixed, firefox31 fixed, b2g-v1.4 fixed, b2g-v2.0 fixed)

VERIFIED FIXED
1.4 S5 (11apr)
blocking-b2g 1.4+
Tracking Status
firefox29 --- wontfix
firefox30 --- fixed
firefox31 --- fixed
b2g-v1.4 --- fixed
b2g-v2.0 --- fixed

People

(Reporter: ashiue, Assigned: ben.tian)

References

Details

Attachments

(2 files)

Attached file TC_AG_IIC_BV_01_I.zip
### ENV Buri/Bluez [1] https://pvtbuilds.mozilla.org/pvt/mozilla.org/b2gotoro/nightly/mozilla-aurora-hamachi-eng/2014/03/2014-03-25-16-02-01/ ### STR 1. PTS 5.0 2. TC_AG_IIC_BV_01_I ### Expected Pass ### Actual None [Output] Test case : TC_AG_IIC_BV_01_I started - SDP Service record for PTS: 'Handsfree HF' successfully registered - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - The IUT claims support for the following eSCO LMP packet types: EV3, 2-EV3, - AT: SPP connect succeeded - AT: Service Level Connection established - AT: post SLC command sequence complete - AT: RING - AT: WARNING: +CLIP received when (callsetup != 1). - AT: Received +CLIP: "0963567158",129 Final Verdict : None
Blocks: 986293
The cause is that HFP manager rejects SCO connection for it misregards SLC is disconnected. HFP manager should not regard SLC as disconnected when "indicator status update" is disabled. The fix makes mSlcConnected being reset as false only when socket disconnects.
Assignee: nobody → btian
Attachment #8399844 - Flags: review?(echou)
Attachment #8399844 - Flags: feedback?(jaliu)
Attachment #8399844 - Flags: review?(echou) → review+
Attachment #8399844 - Flags: feedback?(jaliu) → feedback+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Set 1.4? since this bug fails 1.4 bluetooth certification test case TC_AG_IIC_BV_01_I.
blocking-b2g: --- → 1.4?
blocking-b2g: 1.4? → 1.4+
Verified on Gaia d23e479e8a4ce0bc620acb2d7e2f82801aa4d0ea Gecko https://hg.mozilla.org/releases/mozilla-aurora/rev/36f67ce46855 BuildID 20140428000206 Version 30.0a2
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: