Bug 990428 - Do not reset mSlcConnected=false when indicator status update is disabled, f=jaliu, r=echou